added swagger dependencies, fixed one of the tests?